force-app/main/default/objects/AiAgentInteractionMessage__dll/fields/aiAgentInteractionMsgContentTypeId__c.field-meta.xml
<CustomField>
    <fullName>aiAgentInteractionMsgContentTypeId__c</fullName>
    <label>aiAgentInteractionMsgContentTypeId</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>aiAgentInteractionMsgContentTypeId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>