force-app/main/default/objects/AiAgentInteractionMessage__dll/fields/aiAgentSessionParticipantId__c.field-meta.xml
<CustomField>
    <fullName>aiAgentSessionParticipantId__c</fullName>
    <label>aiAgentSessionParticipantId</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>aiAgentSessionParticipantId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>