force-app/main/default/objects/AiAgentInteractionMessage__dll/fields/contentText__c.field-meta.xml
<CustomField>
    <fullName>contentText__c</fullName>
    <label>contentText</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>contentText</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>