force-app/main/default/objects/AiAgentInteractionMessage__dll/fields/messageAttributes__c.field-meta.xml
<CustomField>
    <fullName>messageAttributes__c</fullName>
    <label>messageAttributes</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>messageAttributes</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>