force-app/main/default/objects/AiAgentInteractionMessage__dll/fields/messageEndTimestamp__c.field-meta.xml
<CustomField>
    <fullName>messageEndTimestamp__c</fullName>
    <label>messageEndTimestamp</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>messageEndTimestamp</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>DateTime</type>
</CustomField>