force-app/main/default/objects/AiAgentInteractionMessage__dll/fields/messageSentTimestamp__c.field-meta.xml
<CustomField>
    <fullName>messageSentTimestamp__c</fullName>
    <label>messageSentTimestamp</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>messageSentTimestamp</externalName>
        <isEventDate>true</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>DateTime</type>
</CustomField>