force-app/main/default/objects/AiAgentInteractionMessage__dll/fields/messageStartTimestamp__c.field-meta.xml
<CustomField>
    <fullName>messageStartTimestamp__c</fullName>
    <label>messageStartTimestamp</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>messageStartTimestamp</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>DateTime</type>
</CustomField>