force-app/main/default/objects/AiAgentInteractionMessage__dll/fields/parentMessageId__c.field-meta.xml
<CustomField>
    <fullName>parentMessageId__c</fullName>
    <label>parentMessageId</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>parentMessageId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>