force-app/main/default/objects/AiAgentInteractionMessage__dll/fields/sessionOwnerId__c.field-meta.xml
<CustomField>
    <fullName>sessionOwnerId__c</fullName>
    <label>sessionOwnerId</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>sessionOwnerId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>